作业 - 全排列